[gd_scene load_steps=38 format=3 uid="uid://c8odqsui6flhs"]

[ext_resource type="Script" uid="uid://d33hs1g3ml24x" path="res://CLASE 3 NODOS/Player.gd" id="1_m2eup"]
[ext_resource type="Texture2D" uid="uid://jlr8eyc08hyy" path="res://CLASE 3 NODOS/assets/Aventurero (Animacion Ataque).png" id="2_lnhmv"]
[ext_resource type="Texture2D" uid="uid://bt4kf3dq7qdw6" path="res://CLASE 3 NODOS/assets/Aventurero (Animacion Death).png" id="3_s536g"]
[ext_resource type="Texture2D" uid="uid://12krt38txmwe" path="res://CLASE 3 NODOS/assets/Aventurero (Pixel Art Idle).png" id="4_8a034"]
[ext_resource type="Texture2D" uid="uid://co2xiotknxlh8" path="res://CLASE 3 NODOS/assets/Aventurero (Animacion Saltar).png" id="5_phf4x"]
[ext_resource type="Texture2D" uid="uid://bpfdbt55cuqn0" path="res://CLASE 3 NODOS/assets/Aventurero (Animacion Correr).png" id="6_fm3y3"]
[ext_resource type="AudioStream" uid="uid://sujrs8ibxpyt" path="res://CLASE 3 NODOS/Audio/Hit.mp3" id="7_3iyrb"]
[ext_resource type="AudioStream" uid="uid://cqgx5vqkmnwb3" path="res://CLASE 3 NODOS/Audio/Jump.mp3" id="8_u5rj8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l53vf"]
atlas = ExtResource("2_lnhmv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mj5i"]
atlas = ExtResource("2_lnhmv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70err"]
atlas = ExtResource("2_lnhmv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr37m"]
atlas = ExtResource("2_lnhmv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnl2q"]
atlas = ExtResource("2_lnhmv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xypgb"]
atlas = ExtResource("2_lnhmv")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umsye"]
atlas = ExtResource("3_s536g")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10utx"]
atlas = ExtResource("3_s536g")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5sb2"]
atlas = ExtResource("3_s536g")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecwu5"]
atlas = ExtResource("3_s536g")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3a1j"]
atlas = ExtResource("3_s536g")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k545v"]
atlas = ExtResource("3_s536g")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulbp8"]
atlas = ExtResource("5_phf4x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_72e81"]
atlas = ExtResource("5_phf4x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj6uy"]
atlas = ExtResource("5_phf4x")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfeyn"]
atlas = ExtResource("5_phf4x")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1mil"]
atlas = ExtResource("5_phf4x")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_585a2"]
atlas = ExtResource("5_phf4x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcuhi"]
atlas = ExtResource("6_fm3y3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_incxc"]
atlas = ExtResource("6_fm3y3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04urb"]
atlas = ExtResource("6_fm3y3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bspcn"]
atlas = ExtResource("6_fm3y3")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrv71"]
atlas = ExtResource("6_fm3y3")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1bf4"]
atlas = ExtResource("6_fm3y3")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4jw5"]
atlas = ExtResource("6_fm3y3")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5cm4"]
atlas = ExtResource("6_fm3y3")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_t27sq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l53vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mj5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70err")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr37m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnl2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xypgb")
}],
"loop": false,
"name": &"Attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umsye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10utx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5sb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecwu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3a1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k545v")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8a034")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulbp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72e81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj6uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfeyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1mil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_585a2")
}],
"loop": false,
"name": &"Jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcuhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_incxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04urb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bspcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrv71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1bf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4jw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5cm4")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5hhfp"]
radius = 6.0
height = 35.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hhfp"]
size = Vector2(20, 4)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 33
collision_mask = 63
platform_floor_layers = 4294967044
platform_wall_layers = 4
script = ExtResource("1_m2eup")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3.5)
sprite_frames = SubResource("SpriteFrames_t27sq")
animation = &"Death"
autoplay = "Idle"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CapsuleShape2D_5hhfp")

[node name="HitPoint" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="AreaHit" type="CollisionShape2D" parent="HitPoint"]
position = Vector2(0, 20.5)
shape = SubResource("RectangleShape2D_5hhfp")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Audio" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("7_3iyrb")

[node name="Jump" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("8_u5rj8")

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="HitPoint" to="." method="_on_hitpoint_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
